Added the footer. Links have hover effect

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -43,17 +43,18 @@ body {
   font-size: 3.5rem;
   text-transform: uppercase;
   font-weight: 700;
+  padding: 3rem;
   display: inline-block;
   background-image: linear-gradient(
     to right,
     $colour-primary-light,
-    $colour-primary-blue,
+    $colour-primary-blue
   );
 
   -webkit-background-clip: text;
   color: transparent;
-  letter-spacing: .2rem;
-  transition: all .2s;
+  letter-spacing: 0.2rem;
+  transition: all 0.2s;
 }
 
 .heading-tertiary {
