added footer. Links have hover effect

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -13,10 +13,14 @@ $colour-tertiary-dark: #5643fa;
 
 $colour-white: #fff;
 $colour-grey: #777;
+$colour-grey-dark: #999;
+$colour-grey-dark-2: #232323;
+
 $colour-black: #000;
 
 $colour-grey-light-1: #f7f7f7;
 $colour-grey-light-2: #eee;
+$colour-grey-light-3: #c6c6c6;
 
 //FONT
 $default-font-size: 1.6rem;
