--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -2,10 +2,9 @@
   width: 75%;
   margin: 0 auto;
   box-shadow: 0 3rem 6rem rgba($colour-black, 0.1);
-  background-color: $colour-white;
+  background-color: rgba($colour-white, 0.6);
   border-radius: 3px;
   padding: 6rem;
-  margin: 3rem 0;
   padding-left: 9rem;
   font-size: $default-font-size;
   transform: skewX(-12deg);
@@ -14,12 +13,18 @@
     width: 15rem;
     height: 15rem;
     float: left;
-    -webkit-shape-outside: circle(50% at 50% 50%);
-    shape-outside: circle(50% at 50% 50%);
-    -webkit-clip-path: circle(50% at 50% 50%);
-    clip-path: circle(50% at 50% 50%);
     transform: translateX(-3rem) skewX(12deg);
     position: relative;
+    overflow: hidden;
+    border-radius: 50%;
+
+    @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
+      -webkit-clip-path: circle(50% at 50% 50%);
+      clip-path: circle(50% at 50% 50%);
+      -webkit-shape-outside: circle(50% at 50% 50%);
+      shape-outside: circle(50% at 50% 50%);
+      border-radius: none;
+    }
   }
 
   &__img {
