--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,19 +1,27 @@
+//Abstracts
 @import "abstracts/functions";
 @import "abstracts/mixins";
 @import "abstracts/variables";
 
+//Base
 @import "base/animations";
 @import "base/base";
 @import "base/typography";
 @import "base/utilities";
 
+//Components
+@import "components/form";
+@import "components/bg-video";
 @import "components/buttons";
 @import "components/card";
 @import "components/composition";
 @import "components/feature-box";
 @import "components/story";
 
+//Layout
+@import "layout/footer";
 @import "layout/grid";
 @import "layout/header";
 
+//Pages
 @import "pages/home";
