--- a/sass/main.scss
+++ b/sass/main.scss
@@ -19,6 +19,7 @@
 @import "components/story";
 
 //Layout
+@import "layout/_navigation";
 @import "layout/footer";
 @import "layout/grid";
 @import "layout/header";
