--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -3,6 +3,7 @@
     display: none;
   }
 
+  //scss made button used instead of checkbox
   &__button {
     background-color: $colour-white;
     height: 7rem;
@@ -12,7 +13,12 @@
     right: 6rem;
     border-radius: 50%;
     z-index: 2000;
+    box-shadow: 0 1rem 3rem rgba($colour-black, 0.1);
+    text-align: center;
+    cursor: pointer;
   }
+
+  //background for navigation
   &__background {
     height: 6rem;
     width: 6rem;
@@ -25,17 +31,21 @@
       $colour-primary-dark
     );
     z-index: 1000;
-
-    transform: scale(80);
+    //transition movement found on easings.net
+    transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
   }
 
   &__nav {
     height: 100vh;
-    width: 100%;
     position: fixed;
     top: 0;
     left: 0;
     z-index: 1500;
+
+    opacity: 0;
+    width: 0;
+    //transition movement found on easings.net
+    transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
   }
 
   &__list {
@@ -64,8 +74,13 @@
         transparent 50%,
         $colour-white 50%
       );
-      background-size: 240%;
-      transition: all 0.5s;
+      background-size: 220%;
+      transition: all 0.4s;
+
+      span {
+        margin-right: 1.5rem;
+        display: inline-block;
+      }
     }
 
     &:hover,
@@ -74,5 +89,15 @@
       color: $colour-primary;
       transform: translateX(1rem);
     }
+  }
+
+  //FUNCTIONALITY
+  &__checkbox:checked ~ &__background {
+    transform: scale(80);
+  }
+
+  &__checkbox:checked ~ &__nav {
+    opacity: 1;
+    width: 100%;
   }
 }
