--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -6,9 +6,11 @@
   }
 }
 
+// Absolute centre. both vert and hori
 @mixin centre-hor-ver {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
