--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,6 +17,7 @@
 @import "components/composition";
 @import "components/feature-box";
 @import "components/story";
+@import "components/popup";
 
 //Layout
 @import "layout/_navigation";
