added functionality to the popup section - 'Book now' buttons on tour cards transitions to the popup. - X close button closes popup with a transition.

--- a/css/style.css
+++ b/css/style.css
@@ -516,7 +516,9 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 3000; }
+  z-index: 3000;
+  opacity: 0;
+  visibility: hidden; }
   .popup__content {
     position: absolute;
     top: 50%;
@@ -528,7 +530,10 @@ body {
     width: 75%;
     border-radius: 3px;
     display: table;
-    overflow: hidden; }
+    overflow: hidden;
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(0.25);
+    transition: all 0.5s 0.2s; }
   .popup__left {
     width: 33.333%;
     display: table-cell;
@@ -549,7 +554,33 @@ body {
     column-count: 2;
     column-gap: 4rem;
     column-rule: 1px solid #c6c6c6;
-    hyphens: auto; }
+    -moz-column-count: 2;
+    -moz-column-gap: 4rem;
+    -moz-column-rule: 1px solid #c6c6c6;
+    hyphens: auto;
+    -moz-hyphens: auto;
+    -ms-hyphens: auto;
+    -webkit-hyphens: auto; }
+  .popup:target {
+    opacity: 1;
+    visibility: visible;
+    transition: all 0.4s; }
+  .popup:target .popup__content {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+    transition: all 0.4s; }
+  .popup__close:link, .popup__close:visited {
+    color: #777;
+    position: absolute;
+    top: 2.5rem;
+    right: 3rem;
+    font-size: 3rem;
+    text-decoration: none;
+    display: inline-block;
+    transition: all 0.4s;
+    line-height: 1; }
+  .popup__close:hover {
+    color: #55c57a; }
 
 .navigation__checkbox {
   display: none; }
