--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -6,6 +6,8 @@
   top: 0;
   left: 0;
   z-index: 3000;
+  opacity: 0;
+  visibility: hidden;
 
   &__content {
     @include centre-hor-ver;
@@ -14,8 +16,11 @@
     height: 40rem;
     width: 75%;
     border-radius: 3px;
-    display: table; //parent div for left and right divs. needed for display: table-cell; on the child divs
+    display: table;
     overflow: hidden;
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(0.25);
+    transition: all 0.5s 0.2s;
   }
 
   &__left {
@@ -53,5 +58,37 @@
     -moz-hyphens: auto;
     -ms-hyphens: auto;
     -webkit-hyphens: auto;
+  }
+
+  //popups open states
+  &:target {
+    opacity: 1;
+    visibility: visible;
+    transition: all 0.4s;
+  }
+
+  &:target &__content {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+    transition: all 0.4s;
+  }
+
+  &__close {
+    &:link,
+    &:visited {
+      color: $colour-grey;
+      position: absolute;
+      top: 2.5rem;
+      right: 3rem;
+      font-size: 3rem;
+      text-decoration: none;
+      display: inline-block;
+      transition: all 0.4s;
+      line-height: 1;
+    }
+
+    &:hover {
+      color: $colour-primary;
+    }
   }
 }
