--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -4,7 +4,6 @@ body {
   /* font-size: 16px; */
   line-height: 1.7;
   color: $colour-grey;
-  padding: 3rem;
 }
 
 .heading-primary {
@@ -23,6 +22,11 @@ body {
     animation-duration: 2s;
     animation-timing-function: ease-out;
 
+    @include respond(phone) {
+      letter-spacing: 1rem;
+      font-size: 5rem;
+    }
+
     /* 
       animation-delay: 2s;
       animation-iteration-count: 3; /*ani happens this many times
@@ -36,6 +40,10 @@ body {
     letter-spacing: 1.75rem;
 
     animation: moveInRight 2s ease-out;
+
+    @include respond(phone) {
+      letter-spacing: 0.5rem;
+    }
   }
 }
 
@@ -51,10 +59,24 @@ body {
     $colour-primary-blue
   );
 
+  background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
   letter-spacing: 0.2rem;
   transition: all 0.2s;
+
+  @include respond(tab-port) {
+    font-size: 3rem;
+  }
+
+  @include respond(phone) {
+    font-size: 2rem;
+  }
+
+  &:hover {
+    transform: skewY(2deg) skewX(15deg) scale(1.1);
+    text-shadow: 0.5rem 1rem 2rem rgba($colour-black, 0.2);
+  }
 }
 
 .heading-tertiary {
