--- a/sass/layout/footer.scss
+++ b/sass/layout/footer.scss
@@ -3,6 +3,10 @@
   padding: 8rem 0;
   font-size: 1.4rem;
 
+  @include respond(tab-port) {
+    padding: 8rem 0;
+  }
+
   &__logo-box {
     text-align: center;
     margin-bottom: 8rem;
@@ -18,6 +22,16 @@
     padding-top: 1.5rem;
     display: inline-block;
     width: 90%;
+
+    @include respond(tab-port) {
+      width: 90%;
+      text-align: center;
+    }
+
+    @include respond(phone) {
+      width: 90%;
+      text-align: center;
+    }
   }
 
   &__list {
